[package]
name = "pronto"
version = "0.1.0"
authors = ["Max Brauer <ma.brauer@live.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.3"
actix-rt = "2.2.0"
actix-files = "0.6.0-beta.6"
actix-cors = "0.6.0-beta.2"
mime = "0.3.16"
listenfd = "0.3.3"
dotenv = "0.15.0"
log = "0.4.14"
env_logger = "0.8.4"
serde = "1.0.126"
serde_json = "1.0.64"
chrono = { version = "0.4.19", features = [ "serde" ] }
diesel = { version = "1.4.7", features = ["postgres", "r2d2", "chrono", "uuidv07" ] }
diesel_migrations = "1.4.0"
lazy_static = "1.4.0"
r2d2 = "0.8.9"
uuid = { version = "0.8.2", features = [ "serde", "v4" ] }
rand = "0.8.4"
